--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html> 
 <html lang="en">
 	<head>
 	<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.1/dojo/dojo.js" type="text/javascript"></script>
