--- a/demo/index.html
+++ b/demo/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html> 
 <html>
   	<head>
-		<title>gitgraph</title>
+		<title>Gitgraph</title>
 		<meta content="pure js github participation graph" name="description" />
 		<link href="http://fonts.googleapis.com/css?family=Amaranth:400,700" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="demo.css" type="text/css" />
 		<link href="google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
 		<script type="text/javascript" src="google-code-prettify/prettify.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.1/dojo/dojo.js" type="text/javascript"></script>
-		<script src="../gitgraph.js"></script>
+		<script src="../Gitgraph.js"></script>
   	</head>
 	<body onload="prettyPrint()">
-		<div class="title">gitgraph</div>
+		<div class="title">Gitgraph</div>
 		<div class="subtitle">
 			pure js github participation graph
 		</div>
@@ -32,25 +31,24 @@
 			<span class="examples">Usage</span><br>
 			1. Paste into your page's HEAD
 			<pre class="prettyprint code">
-&lt;script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.1/dojo/dojo.js" type="text/javascript"&gt;&lt;/script&gt;
-&lt;script src="http://logicalcognition.com/Projects/gitview/gitview.js"&gt;&lt;/script&gt;</pre>
+&lt;script src="http://logicalcognition.com/Projects/Gitgraph/Gitgraph.js"&gt;&lt;/script&gt;</pre>
 			2. From within a &lt;script&gt; tag or a JS file
 			<pre class="prettyprint code">
-var graph = new gitgraph({ 
+var graph = new Gitgraph({ 
   user    : 'bouchon',      // any github username
   repo    : 'coweb',        // name of repo
   domNode : document.body,  // domNode to attach to (optional)
 });</pre>
 			<span class="examples">Issues & Features</span><br>
-			Report any issues and features (I'm sure I missed a lot of stuff) on <a href="http://github.com/bouchon/gitgraph">Github</a>.
+			Report any issues and features (I'm sure I missed a lot of stuff) on <a href="http://github.com/bouchon/Gitgraph">Github</a>.
 		</div>
-		<a href="http://github.com/bouchon/gitgraph"><img style="position: absolute; top: 0; right: 0; border: 0;" src="images/fork.png" alt="Fork me on GitHub"></a>
+		<a href="http://github.com/bouchon/Gitgraph"><img style="position: absolute; top: 0; right: 0; border: 0;" src="images/fork.png" alt="Fork me on GitHub"></a>
   	</body>
 	<script>
-		var graph = new gitgraph({ 
+		var graph = new Gitgraph({ 
 		  user    : 'bouchon',      // any github username
 		  repo    : 'coweb',        // name of repo
-		  domNode : dojo.byId('demoHolder'),  // domNode to attach to (optional)
+		  domNode : document.getElementById('demoHolder'),  // domNode to attach to (optional)
 		});
 	</script>
 </html>
